# MedicalAssistant

./: .gitignore  .replit  ai_agent.py  allergy_checker.py  database.py  groq_client.py  main.py  medical_assistant.db  models.py  prescription_ocr.py  pyproject.toml  replit.md  sample_data.py  schemas.py
static/: index.html  script.js  style.css
